--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
         "creativeorange/gravatar": "~1.0",
-        "socieboy/alerts" : "dev-master"
+        "guzzle/guzzle": "3.*",
+        "guzzlehttp/guzzle": "4.*",
+        "laravel/framework": "5.3.*",
+        "laravel/socialite": "2.0",
+        "league/oauth1-client": "1.0.*",
+        "socieboy/alerts": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
